data/derived/fa15/progs/unify/prog2985.ml.out
Characters 138-147:
  | Cosine e  -> "cos(pi*"exprToString e")"
                 ^^^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
